@@ -14,23 +14,28 @@ import spoon.reflect.code.CtExpression;
 import spoon.reflect.code.CtInvocation;
 import spoon.reflect.code.CtLiteral;
 import spoon.reflect.code.CtNewArray;
+import spoon.reflect.code.CtReturn;
 import spoon.reflect.code.CtSwitch;
 import spoon.reflect.code.CtSwitchExpression;
 import spoon.reflect.code.CtTypeAccess;
 import spoon.reflect.declaration.CtField;
+import spoon.reflect.declaration.CtMethod;
 import spoon.reflect.reference.CtExecutableReference;
 import spoon.reflect.reference.CtTypeReference;
 import spoon.reflect.visitor.CtScanner;
+import spoon.reflect.visitor.filter.TypeFilter;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-@ExecutableCheck(reportedProblems = { ProblemType.CLOSED_SET_OF_VALUES })
+@ExecutableCheck(reportedProblems = {ProblemType.CLOSED_SET_OF_VALUES})
 public class ClosedSetOfValues extends IntegratedCheck {
     private static final int MIN_SET_SIZE = 3;
     private static final int MAX_SET_SIZE = 12;
@@ -42,9 +47,9 @@ public class ClosedSetOfValues extends IntegratedCheck {
 
     private static boolean isSupportedType(CtTypeReference<?> ctTypeReference) {
         return SUPPORTED_TYPES
-                .stream()
-                .map((Class<?> e) -> ctTypeReference.getFactory().Type().createReference(e))
-                .anyMatch(ty -> ty.equals(ctTypeReference));
+            .stream()
+            .map((Class<?> e) -> ctTypeReference.getFactory().Type().createReference(e))
+            .anyMatch(ctTypeReference::equals);
     }
 
     private static List<CtExpression<?>> parseOfExpression(CtExpression<?> ctExpression) {
@@ -97,7 +102,7 @@ public class ClosedSetOfValues extends IntegratedCheck {
         return true;
     }
 
-    private void checkSwitch(StaticAnalysis staticAnalysis, CtAbstractSwitch<?> ctSwitch) {
+    private void checkSwitch(CtAbstractSwitch<?> ctSwitch) {
         CtTypeReference<?> ctTypeReference = ctSwitch.getSelector().getType();
 
         if (!isSupportedType(ctTypeReference)) {
@@ -110,10 +115,10 @@ public class ClosedSetOfValues extends IntegratedCheck {
         }
 
         boolean areKnown = ctSwitch.getCases()
-                .stream()
-                .flatMap((CtCase<?> e) -> e.getCaseExpressions().stream())
-                .map(SpoonUtil::resolveCtExpression)
-                .allMatch(e -> e instanceof CtLiteral<?>);
+            .stream()
+            .flatMap((CtCase<?> e) -> e.getCaseExpressions().stream())
+            .map(SpoonUtil::resolveCtExpression)
+            .allMatch(e -> e instanceof CtLiteral<?>);
 
         if (areKnown && !this.isEnumMapping(ctSwitch)) {
             addLocalProblem(
@@ -124,29 +129,79 @@ public class ClosedSetOfValues extends IntegratedCheck {
         }
     }
 
-    private void checkFiniteListing(StaticAnalysis staticAnalysis, CtExpression<?> ctExpression, List<CtExpression<?>> values) {
-        // resolve list of constants
-        List<CtExpression<?>> elements = values
-            .stream()
-            .map(SpoonUtil::resolveCtExpression)
-            .collect(Collectors.toList());
+    private static Set<CtLiteral<?>> distinctElements(Collection<? extends CtLiteral<?>> elements) {
+        return new LinkedHashSet<>(elements.stream()
+            .filter(e -> e.getValue() != null)
+            .toList());
+    }
 
+    private static boolean isFiniteSet(Collection<? extends CtLiteral<?>> distinctElements) {
         // check the size on the distinct elements (to avoid linting e.g. List.of(0, 0, 0, 0, 0))
-        Collection<CtExpression<?>> distinctElements = new HashSet<>(elements);
-        if (distinctElements.size() < MIN_SET_SIZE || distinctElements.size() > MAX_SET_SIZE) {
+        return distinctElements.size() >= MIN_SET_SIZE && distinctElements.size() <= MAX_SET_SIZE;
+    }
+
+    private static List<CtLiteral<?>> getFiniteSet(Iterable<? extends CtExpression<?>> elements) {
+        List<CtLiteral<?>> result = new ArrayList<>();
+
+        for (CtExpression<?> ctExpression : elements) {
+            CtExpression<?> resolved = SpoonUtil.resolveCtExpression(ctExpression);
+
+            if (!isSupportedType(resolved.getType()) || !(resolved instanceof CtLiteral<?> ctLiteral)) {
+                return List.of();
+            }
+
+            result.add(ctLiteral);
+        }
+
+        return result;
+    }
+
+    private void checkFiniteListing(CtExpression<?> ctExpression, Iterable<? extends CtExpression<?>> values) {
+        List<CtLiteral<?>> literals = getFiniteSet(values);
+        Collection<CtLiteral<?>> distinctElements = distinctElements(literals);
+
+        if (literals.isEmpty() || !isFiniteSet(distinctElements)) {
             return;
         }
 
-        boolean areKnown = elements.stream().allMatch(e -> e instanceof CtLiteral<?>);
-        boolean areAllOfSupportedType = elements.stream().allMatch(e -> isSupportedType(e.getType()));
+        this.addLocalProblem(
+            ctExpression,
+            new LocalizedMessage("closed-set-of-values-list"),
+            ProblemType.CLOSED_SET_OF_VALUES
+        );
+    }
 
-        if (areKnown && areAllOfSupportedType) {
-            addLocalProblem(
-                ctExpression,
-                new LocalizedMessage("closed-set-of-values-list"),
-                ProblemType.CLOSED_SET_OF_VALUES
-            );
+    private void checkCtMethod(CtMethod<?> ctMethod) {
+        CtTypeReference<?> returnType = ctMethod.getType();
+        if (returnType == null || !isSupportedType(returnType)) {
+            return;
         }
+
+        List<CtReturn<?>> ctReturns = ctMethod.getElements(new TypeFilter<>(CtReturn.class));
+
+        List<CtLiteral<?>> literals = getFiniteSet(ctReturns
+            .stream()
+            .map(CtReturn::getReturnedExpression)
+            .toList());
+        Collection<CtLiteral<?>> distinctElements = distinctElements(literals);
+
+        if (literals.isEmpty() || !isFiniteSet(distinctElements)) {
+            return;
+        }
+
+        this.addLocalProblem(
+            ctMethod,
+            new LocalizedMessage(
+                "closed-set-of-values-method",
+                Map.of(
+                    "values",
+                    distinctElements.stream()
+                        .map(CtLiteral::prettyprint)
+                        .collect(Collectors.joining(", "))
+                )
+            ),
+            ProblemType.CLOSED_SET_OF_VALUES
+        );
     }
 
     @Override
@@ -154,13 +209,13 @@ public class ClosedSetOfValues extends IntegratedCheck {
         staticAnalysis.getModel().getRootPackage().accept(new CtScanner() {
             @Override
             public <S> void visitCtSwitch(CtSwitch<S> switchStatement) {
-                checkSwitch(staticAnalysis, switchStatement);
+                checkSwitch(switchStatement);
                 super.visitCtSwitch(switchStatement);
             }
 
             @Override
             public <T, S> void visitCtSwitchExpression(CtSwitchExpression<T, S> switchExpression) {
-                checkSwitch(staticAnalysis, switchExpression);
+                checkSwitch(switchExpression);
                 super.visitCtSwitchExpression(switchExpression);
             }
 
@@ -180,12 +235,18 @@ public class ClosedSetOfValues extends IntegratedCheck {
                 }
 
                 if (ctField.getType().isArray() && ctExpression instanceof CtNewArray<?> ctNewArray) {
-                    checkFiniteListing(staticAnalysis, ctExpression, ctNewArray.getElements());
+                    checkFiniteListing(ctExpression, ctNewArray.getElements());
                 } else {
-                    checkFiniteListing(staticAnalysis, ctExpression, parseOfExpression(ctExpression));
+                    checkFiniteListing(ctExpression, parseOfExpression(ctExpression));
                 }
 
                 super.visitCtField(ctField);
+            }
+
+            @Override
+            public <T> void visitCtMethod(CtMethod<T> ctMethod) {
+                checkCtMethod(ctMethod);
+                super.visitCtMethod(ctMethod);
             }
         });
     }
